--- a/liulei-spring-cloud-config/pom.xml
+++ b/liulei-spring-cloud-config/pom.xml
@@ -8,19 +8,14 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>liulei-spring-cloud-feigh</artifactId>
-    <name>liulei-spring-cloud-feigh</name>
+    <groupId>com.liulei.cloud.config</groupId>
+    <artifactId>liulei-spring-cloud-config</artifactId>
     <packaging>jar</packaging>
 
     <dependencies>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-starter-feign</artifactId>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
+            <artifactId>spring-cloud-config-server</artifactId>
         </dependency>
 
         <dependency>
@@ -28,20 +23,12 @@
             <artifactId>spring-cloud-starter-eureka</artifactId>
         </dependency>
 
-        <!--mysql-->
         <dependency>
-            <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
-        </dependency>
-
-        <!--mybatis-plus-->
-        <dependency>
-            <groupId>com.baomidou</groupId>
-            <artifactId>mybatis-plus-boot-starter</artifactId>
-            <version>2.3</version>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
         </dependency>
     </dependencies>
-
 
 
 
