--- a/liulei-spring-cloud-consumer/pom.xml
+++ b/liulei-spring-cloud-consumer/pom.xml
@@ -50,6 +50,11 @@
             <artifactId>fastjson</artifactId>
             <version>1.1.41</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-config-client</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
