--- a/liulei-spring-cloud-consumer/pom.xml
+++ b/liulei-spring-cloud-consumer/pom.xml
@@ -74,6 +74,18 @@
             <version>1.7.17</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.10</version>
+            <scope>provided</scope>
+        </dependency>
+        <!--excel 导入导出-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>easyexcel</artifactId>
+            <version>2.0.1</version>
+        </dependency>
     </dependencies>
 
 </project>
